--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "cors": "^2.8.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.1",
     "react-router": "^6.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.4",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.2"
   },
